--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="genworld, ai, game, gpt, chatGPT, agent, LLM, chat, bot legend, sci-fi, fiction, aigc, novel, web3, nft, blockchain" />
+    <meta name="author" content="Crazy Diamond" />
+
+    <link rel="icon" href="/favicon.ico" />
+
     <title>GenWorld</title>
   </head>
   <body>
