--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="/favicon.ico" />
 
-    <title>GenWorld</title>
+    <title>GenWorld.io - The First Multi-modal AI Gaming Platform</title>
   </head>
   <body>
     <div id="root"></div>
